DE2551 - Payment widget error message styling issue Increase line-height to accommodate text-wrapping on smaller devices.

--- a/src/styles/layout/_inline-giving.scss
+++ b/src/styles/layout/_inline-giving.scss
@@ -678,7 +678,7 @@
     }
 
     p {
-      line-height: 10px;
+      line-height: 18px;
       margin: 7px 0 10px;
     }
 
